--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
   </parent>
 
   <artifactId>cloudbees-bitbucket-branch-source</artifactId>
-  <version>2.4.0</version>
+  <version>2.4.0-patch</version>
   <packaging>hpi</packaging>
 
   <name>Bitbucket Branch Source Plugin</name>
